Completed next day.
Made wonderful progress on pawn inputs and camera movement. It's a lot better now! Need to work on camera zoom and light walls next. That'll be a trip.

--- a/monthlyGames/fLight Bikes (June 2023)/Dev Logs/Day 1 (6-8-23).md
+++ b/monthlyGames/fLight Bikes (June 2023)/Dev Logs/Day 1 (6-8-23).md
@@ -1,15 +1,15 @@
-June 8th, 2023
-First day of work
+#June 8th, 2023
+##First day of work
 
-Idea: 
+###Idea: 
 	
 My idea for this project is to make a game that jumps-off a childhood favorite of mine: Light Bikes (hence the name). I want to make a 3D flgiht version of light bikes, where players can fly in a 3D space while always moving forward, and creatinng a wall of light behind them.
 	
-Goal:
+###Goal:
 	
 The goal of this project is to take a simple idea and use it to learn the Unreal engine. As of now, I know next-to-nothing about the engine and how it works. I want to gain more experience in the engine both for personal use and since it would make for a good skill when seeking a job. Beyond that, I have little expectations with the engine, so I guess we'll see where I end up!
 	
-End of Day write-up:
+###End of Day write-up:
 	
 I think I got a lot done! I managed to work out how enhanced inputs maps and actions work, and get some of the basics done. I'm still having errors with rotatting the player to tilt them up/down while flying, so I'm going to need to look into that more. Currently I have the camera look and left/right movement working. In this case the movement is just going to be turning the player (they're a box). I also want to get some camera zoom going, so I can adjust my view a little bit better as-needed. That one might be interesting to implement, but I have some ideas.
 	
