Update Day 11 (7-26-23).md
Updated dev log.

--- a/monthlyGames/DX11 Engine Improvements (July 2023)/Dev Logs/Day 11 (7-26-23).md
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/Dev Logs/Day 11 (7-26-23).md
@@ -15,3 +15,5 @@ So I know what my final problem is: properly dispatching vertex shaders. The sol
 I decided to try the above method. It uh...doesn't work. I'm going to have to try something else, but I'm really not sure what the play is.
 
 I think I'm going to need to reconsider this paradigm. I've already sunk a lot of time into it, and I think it's just fundamentally a bad idea. I'm happy I got to learn some interesting shader and memory tricks while implementing GPU-side emitters, but unfortunately there's just too many issues with my initial setup that I'd have to redesign things even more to get it working. As such, I think I'm going to revert the emitter changes to a previous thing and leave it there.
+
+On the bright side, now is going to be a good time to learn how to properly revert git changes.
